src/runtime/kwalletd/main.cpp
@@ -186,7 +186,7 @@ int main(int argc, char **argv)
     aboutdata.addAuthor(i18n("Thiago Maceira"), i18n("D-Bus Interface"), "thiago@kde.org");
 
     KWalletD walletd;
-    MigrationAgent migrationAgent(&walletd);
+    MigrationAgent migrationAgent(&walletd, hash);
     KDBusService dbusUniqueInstance(KDBusService::Unique | KDBusService::NoExitOnFailure);
 
     // NOTE: the command should be parsed only after KDBusService instantiation
